# greedy_auxiliary_loss

./: .gitignore  README.md  pyproject.toml  requirements.txt
reports/: cifar100_direct_hidden_note.md  experiment_report.md
results/: all_runs.csv  cifar100_direct_hidden_summary.json  cifar100_full_budget_summary.json  stage1_selection.json  stage2_summary.json  stage3_ag_news_summary.json  stage4_dbpedia_summary.json
scripts/: make_report.py  rebuild_all_runs.py  run_cifar100_direct_hidden_study.py  run_cifar100_full_budget.py  run_experiment.py  run_stage1_pilot.py  run_stage2_suite.py  run_stage3_ag_news.py  run_stage4_dbpedia.py
src/greedy_auxiliary_loss/: __init__.py  config.py  losses.py  module.py  runner.py
src/greedy_auxiliary_loss/models/: __init__.py  mlp.py  resnet.py  text_transformer.py  vit.py
src/greedy_auxiliary_loss/utils/: __init__.py  plotting.py  repro.py  results.py
tests/: test_aux_loss.py
