[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greedy-auxiliary-loss"
version = "0.1.0"
description = "Research code for layerwise downstream-target auxiliary losses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "lightning>=2.4.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
